@@ -1,3 +1,7 @@
+2021-06-20  Marc Glisse  <marc.glisse@inria.fr>
+
+	* gmpxx.h (mpq_class(mpz_class&&)): New constructor.
+
 2021-06-20  Niels Möller  <nisse@lysator.liu.se>
 
 	* doc/gmp.texi: Document foo_ptr and foo_srcptr.
